force-app/main/default/objects/Fee_Payment_Criteria__c/Fee_Payment_Criteria__c.object-meta.xml
<CustomObject>
    <label>Fee Payment Criteria</label>
    <nameField>
        <label>Fee Payment Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fee Payment Criterias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>