force-app/main/default/objects/Fee_Payment_Criteria__c/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <label>Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Academic Fee</fullName>
            </value>
            <value>
                <fullName>Application Fee</fullName>
            </value>
            <value>
                <fullName>Examination &amp; Valuation Fee</fullName>
            </value>
            <value>
                <fullName>Guest House Fee</fullName>
            </value>
            <value>
                <fullName>Hostel Fee</fullName>
            </value>
            <value>
                <fullName>Mess Penalty Fees</fullName>
                <isActive>false</isActive>
                <label>Mess Penalty Fees</label>
            </value>
            <value>
                <fullName>Miscellaneous Fee</fullName>
            </value>
            <value>
                <fullName>Missed Meal Fee</fullName>
            </value>
            <value>
                <fullName>Penalty Fee</fullName>
            </value>
            <value>
                <fullName>Transportation Fee</fullName>
            </value>
            <value>
                <fullName>Tuition Fee</fullName>
            </value>
            <value>
                <fullName>University Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>