force-app/main/default/objects/Fee_Payment_Criteria__c/fields/Maximum_Number_of_Installments__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Number_of_Installments__c</fullName>
    <label>Maximum Number of Payments Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>