force-app/main/default/objects/Fee_Payment_Criteria__c/fields/Merchant_ID_Eazypay__c.field-meta.xml
<CustomField>
    <fullName>Merchant_ID_Eazypay__c</fullName>
    <label>Merchant ID - Eazypay</label>
    <length>100</length>
    <type>Text</type>
</CustomField>