force-app/main/default/objects/Fee_Payment_Criteria__c/fields/Min_Payment_Percentage_per_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Min_Payment_Percentage_per_Transaction__c</fullName>
    <label>Min Payment Percentage per Transaction</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>