force-app/main/default/objects/Fee_Payment_Criteria__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fee_Type__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>Maximum_Number_of_Installments__c</columns>
    <columns>Merchant_ID_Eazypay__c</columns>
    <columns>Merchant_ID_Billdesk__c</columns>
    <columns>Merchant_ID_Paytm__c</columns>
    <columns>Merchant_ID_Razorpay__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>